SERVER-86717 Resharding should validate user provided zone range doesn't include $-prefixed fields. (#19551)

GitOrigin-RevId: eae5a264cdad29b5f8cf6978e9a0d7cad2800924