src/mongo/db/s/config/configsvr_reshard_collection_cmd.cpp
@@ -243,6 +243,13 @@ public:
 
                 if (auto zones = request().getZones()) {
                     resharding::checkForOverlappingZones(*zones);
+
+                    for (const auto& zone : *zones) {
+                        uassertStatusOK(
+                            ShardKeyPattern::checkShardKeyIsValidForMetadataStorage(zone.getMin()));
+                        uassertStatusOK(
+                            ShardKeyPattern::checkShardKeyIsValidForMetadataStorage(zone.getMax()));
+                    }
                 }
 
                 auto coordinatorDoc =
